--- a/css/main.css
+++ b/css/main.css
@@ -1,61 +1,105 @@
+:root {
+    --main-color: #030303;
+    --main-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    --width: 700px;
+    --margin-right: 25px;
+    --margin-left: 10px;
+}
+
+
 body {
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: var(--main-font-family);
 }
 
-header {
+.main-header {
     display: inline-block;
-    width: 700px;
+    width: var(--width);
     margin-top: 150px;
-    margin-left: calc((100% - 700px) / 2); /*--must be spaces between math operators*/
+    margin-left: calc((100% - var(--width)) / 2); /*--must be spaces between math operators*/
 }
 
-header>div {
-    float: right;
-}
-
-header>nav {
-    float: right;
-}
-
-nav>a {
-    display: inline-block;
-}
-
-.icon {
+.menu-bar {
     float: left;
+    margin-left: var(--margin-left);
+    color: #F76E5E;
+    font-size: 20px;
+    text-decoration: none;
+    transition: all 0.5s;
 }
+
+.menu-bar:hover{
+    color: #7C39AC;
+}
+
+.main-nav {
+    float: right;
+    margin-right: var(--margin-right);
+}
+
+.main-nav > .link{
+    text-decoration: none;
+    color: var(--main-color);
+    font-size: 11px;
+    font-weight: 550;
+    margin-right: var(--margin-right);
+    transition: all 0.5s;
+    border: 2px solid transparent;
+    border-radius: 10px;
+    padding: 4px;
+}
+
+.main-nav > .link:hover{
+    border-color: #F76E5E;
+}
+
+.search-bar{
+    background-color: #FFD3D6;
+    border: 2px solid #f1e3e2;
+    border-radius: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    height: 10px;
+    width: 130px;
+}
+
+.main-nav > .link.active {
+    /**/
+}
+
 
 /*-----------------------------------------------------*/
 
-main {
+.main-content {
     display: inline-block;
-    width: 700px;
-    margin-top: 10px;
+    width: var(--width);
+    margin-top: 5px;
     margin-left: calc((100% - 700px) / 2);
 }
 
-main>div {
+.left-column {
     width:38%;
     float: left;
+    margin-left: var(--margin-left);
 }
 
-h1 {
+.main-title {
     font-size: 50px;
     color: #F76E5E;
-    margin-left: 10px;
-    margin-top: 50px;
+    margin-top: 40px;
+    margin-bottom: 0;
+    font-weight: 700;
 }
 
-p {
-    font-size: 12px;
+.description {
+    font-size: 14px;
     line-height: 1.3em;
-    margin-left: 10px;
+    color: var(--main-color);
+    font-weight: 200;
 }
 
-main>div>a {
-    margin-left: 10px;
-    margin-top: 10px;
-    margin-bottom: 40px;
+.btn {
+    margin-top: 20px;
+    margin-bottom: 45px;
     display: inline-block;
     border-radius: 25px;
     padding: 7px;
@@ -70,15 +114,29 @@ main>div>a {
     transition: all 0.5s;
 }
 
-main>div>a:hover {
+.btn:hover {
     background-color: #7C39AC;
 }
 
-div>div>a {
+.socials {
     margin-left: 10px;
 }
 
-img {
+.socials>.icon {
+    text-decoration: none;
+    font-size: 15px;
+    background-color: ;
+    color: #030303;
+    padding-right: 5px;
+    line-height: ;
+    transition: all 0.5s;
+}
+
+.socials>.icon:hover {
+    color: #F76E5E;
+}
+
+.right-column {
     width: 62%;
     float: right;
     width: 400px;
